# libGPCGUIGLCanvas

./: .gitmodules  CMakeLists.txt
assets/: template.xcf  template2.xcf  uniform_fill.xcf
include/gpc/gui/gl/: painter.hpp
lib/: CMakeLists.txt  libGPCGUIGLRenderer-config.cmake.in
lib/include/gpc/gui/gl/: canvas.hpp  renderer.hpp
lib/src/: canvas.cpp  fragment.glsl  renderer.cpp  vertex.glsl
src/: painter.cpp
testapp/: CMakeLists.txt  main.cpp
testsuite/: test.cpp
